# FMHD

./: CMakeLists.txt  README.md
include/: commons.hpp  sketch.hpp
src/: commons.cc  main.cc  sketch.cc
src/distances/: ibf.cc  index_packing.cc  index_packing_16bits.cc  mode.cc  mode_byte_check.cc  mode_trailing_zeros.cc  naive_dist.cc
